--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -11,157 +11,169 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
-    />
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
   </head>
   <body>
-    <h2>Saha süpürgesi</h2>
-    <section id="loader">
-      <svg
-        width="55"
-        height="80"
-        viewBox="0 0 55 80"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="#000"
-      >
-        <g transform="matrix(1 0 0 -1 0 80)">
-          <rect width="10" height="20" rx="3">
-            <animate
-              attributeName="height"
-              begin="0s"
-              dur="4.3s"
-              values="20;45;57;80;64;32;66;45;64;23;66;13;64;56;34;34;2;23;76;79;20"
-              calcMode="linear"
-              repeatCount="indefinite"
-            />
-          </rect>
-          <rect x="15" width="10" height="80" rx="3">
-            <animate
-              attributeName="height"
-              begin="0s"
-              dur="2s"
-              values="80;55;33;5;75;23;73;33;12;14;60;80"
-              calcMode="linear"
-              repeatCount="indefinite"
-            />
-          </rect>
-          <rect x="30" width="10" height="50" rx="3">
-            <animate
-              attributeName="height"
-              begin="0s"
-              dur="1.4s"
-              values="50;34;78;23;56;23;34;76;80;54;21;50"
-              calcMode="linear"
-              repeatCount="indefinite"
-            />
-          </rect>
-          <rect x="45" width="10" height="30" rx="3">
-            <animate
-              attributeName="height"
-              begin="0s"
-              dur="2s"
-              values="30;45;13;80;56;72;45;76;34;23;67;30"
-              calcMode="linear"
-              repeatCount="indefinite"
-            />
-          </rect>
-        </g>
-      </svg>
-      <div>Retrieving details</div>
-    </section>
-    <section id="preview" style="display: none">
-      <div class="details">
-        <table>
-          <tbody></tbody>
-        </table>
-      </div>
-      <input type="hidden" id="entry-json" />
-      <div class="buttons">
-        <button id="save-entry-button" style="text-align: left; margin-right: 5px;">
-          <span style="display: none">Save Entry</span>
 
-  
-          <svg
-            width="120"
-            height="30"
-            viewBox="0 0 240 60"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="#fff"
-            style="display: inline-block; width: 40px;"
-          >
-            <circle cx="15" cy="15" r="15">
-              <animate
-                attributeName="r"
-                from="15"
-                to="15"
-                begin="0s"
-                dur="0.8s"
-                values="15;9;15"
-                calcMode="linear"
-                repeatCount="indefinite"
-              />
-              <animate
-                attributeName="fill-opacity"
-                from="1"
-                to="1"
-                begin="0s"
-                dur="0.8s"
-                values="1;.5;1"
-                calcMode="linear"
-                repeatCount="indefinite"
-              />
-            </circle>
-            <circle cx="60" cy="15" r="9" fill-opacity="0.3">
-              <animate
-                attributeName="r"
-                from="9"
-                to="9"
-                begin="0s"
-                dur="0.8s"
-                values="9;15;9"
-                calcMode="linear"
-                repeatCount="indefinite"
-              />
-              <animate
-                attributeName="fill-opacity"
-                from="0.5"
-                to="0.5"
-                begin="0s"
-                dur="0.8s"
-                values=".5;1;.5"
-                calcMode="linear"
-                repeatCount="indefinite"
-              />
-            </circle>
-            <circle cx="105" cy="15" r="15">
-              <animate
-                attributeName="r"
-                from="15"
-                to="15"
-                begin="0s"
-                dur="0.8s"
-                values="15;9;15"
-                calcMode="linear"
-                repeatCount="indefinite"
-              />
-              <animate
-                attributeName="fill-opacity"
-                from="1"
-                to="1"
-                begin="0s"
-                dur="0.8s"
-                values="1;.5;1"
-                calcMode="linear"
-                repeatCount="indefinite"
-              />
-            </circle>
-          </svg>
-        </button>
-        <button id="copy-entry-button">Copy Entry JSON</button>
+    <div class="container">
+      <div class="top">
+        <h2 class="text-2xl font-bold p-3 w-auto">Saha süpürgesi</h2>
+        <svg
+                id="small-loader"
+                width="60"
+                height="10"
+                viewBox="0 0 240 60"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="rgba(127,29,29)"
+                style="position: absolute; right: 1px; top: 26px; display: none;"
+              >
+                <circle cx="15" cy="15" r="15">
+                  <animate
+                    attributeName="r"
+                    from="15"
+                    to="15"
+                    begin="0s"
+                    dur="0.8s"
+                    values="15;9;15"
+                    calcMode="linear"
+                    repeatCount="indefinite"
+                  />
+                  <animate
+                    attributeName="fill-opacity"
+                    from="1"
+                    to="1"
+                    begin="0s"
+                    dur="0.8s"
+                    values="1;.5;1"
+                    calcMode="linear"
+                    repeatCount="indefinite"
+                  />
+                </circle>
+                <circle cx="60" cy="15" r="9" fill-opacity="0.3">
+                  <animate
+                    attributeName="r"
+                    from="9"
+                    to="9"
+                    begin="0s"
+                    dur="0.8s"
+                    values="9;15;9"
+                    calcMode="linear"
+                    repeatCount="indefinite"
+                  />
+                  <animate
+                    attributeName="fill-opacity"
+                    from="0.5"
+                    to="0.5"
+                    begin="0s"
+                    dur="0.8s"
+                    values=".5;1;.5"
+                    calcMode="linear"
+                    repeatCount="indefinite"
+                  />
+                </circle>
+                <circle cx="105" cy="15" r="15">
+                  <animate
+                    attributeName="r"
+                    from="15"
+                    to="15"
+                    begin="0s"
+                    dur="0.8s"
+                    values="15;9;15"
+                    calcMode="linear"
+                    repeatCount="indefinite"
+                  />
+                  <animate
+                    attributeName="fill-opacity"
+                    from="1"
+                    to="1"
+                    begin="0s"
+                    dur="0.8s"
+                    values="1;.5;1"
+                    calcMode="linear"
+                    repeatCount="indefinite"
+                  />
+                </circle>
+              </svg>
       </div>
-    </section>
+      <div class="middle">        
+        <section id="loader">
+          <svg
+            width="55"
+            height="80"
+            viewBox="0 0 55 80"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="#000"
+          >
+            <g transform="matrix(1 0 0 -1 0 80)">
+              <rect width="10" height="20" rx="3">
+                <animate
+                  attributeName="height"
+                  begin="0s"
+                  dur="4.3s"
+                  values="20;45;57;80;64;32;66;45;64;23;66;13;64;56;34;34;2;23;76;79;20"
+                  calcMode="linear"
+                  repeatCount="indefinite"
+                />
+              </rect>
+              <rect x="15" width="10" height="80" rx="3">
+                <animate
+                  attributeName="height"
+                  begin="0s"
+                  dur="2s"
+                  values="80;55;33;5;75;23;73;33;12;14;60;80"
+                  calcMode="linear"
+                  repeatCount="indefinite"
+                />
+              </rect>
+              <rect x="30" width="10" height="50" rx="3">
+                <animate
+                  attributeName="height"
+                  begin="0s"
+                  dur="1.4s"
+                  values="50;34;78;23;56;23;34;76;80;54;21;50"
+                  calcMode="linear"
+                  repeatCount="indefinite"
+                />
+              </rect>
+              <rect x="45" width="10" height="30" rx="3">
+                <animate
+                  attributeName="height"
+                  begin="0s"
+                  dur="2s"
+                  values="30;45;13;80;56;72;45;76;34;23;67;30"
+                  calcMode="linear"
+                  repeatCount="indefinite"
+                />
+              </rect>
+            </g>
+          </svg>
+          <div>Retrieving details</div>
+        </section>
+        <section id="preview" style="display: none">
+          <div class="details">
+            <table class="table-fixed">
+              <thead>
+                <th class="w-24"></th>
+                <th></th>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>          
+        </section>
+      </div>
+      <div class="bottom">
+        <input type="hidden" id="entry-json" />
+          <div class="buttons px-5">
+            <button id="save-entry-button" class='cursor-not-allowed px-5 py-3 mb-2 font-extrabold tracking-widest text-white uppercase bg-gray-400 shadow-lg focus:outline-none hover:bg-gray-400 hover:shadow-none' style="text-align: left; margin-right: 5px;">
+              <span>Save Entry</span>              
+            </button>
+            <button id="copy-entry-button" class="px-5 py-3 mb-2 font-extrabold tracking-widest text-white uppercase bg-red-900 shadow-lg focus:outline-none hover:bg-gray-400 hover:shadow-none">Copy Entry JSON</button>            
+          </div>
+      </div>
+    </div>
+
+    
+    
 
     <script src="popup.js"></script>
   </body>
