--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -7,7 +7,7 @@
   <body>
     <div style="margin: 20px; padding: 10px; background-color: lemonchiffon;">
     <label>
-      Target<br/>
+      Catalog<br/>
       <input type="text" id="target" />
     </label> <br/><br/>
 
