Fixes github action

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -160,6 +160,11 @@
             </table>
           </div>          
         </section>
+        <section id="success" style="display: none">
+          <div class="mx-auto mt-20 text-2xl font-bold">Entry created.</div>
+          <button id="view-entries" class="mx-auto px-5 py-3 mt-3 font-extrabold tracking-widest text-white uppercase bg-red-900 shadow-lg focus:outline-none hover:bg-gray-400 hover:shadow-none">View</button>            
+        </section>
+
       </div>
       <div class="bottom">
         <input type="hidden" id="entry-json" />
